--- a/src/main/resources/locale/locale_en_US.properties
+++ b/src/main/resources/locale/locale_en_US.properties
@@ -1,9 +1,20 @@
 
-
+# GENERAL
 General.Plugin_Header=[[GRAY]]-----[ [[GOLD]]{0}[[GRAY]] ]----- by [[GOLD]]{1}
 General.Running_Version=[[GRAY]]Running version: [[DARK_AQUA]]{0}
 General.Use_Help=[[GRAY]]Use: [[GOLD]]/ghosts help [[GRAY]]for more information
 
+Tombstone.Cannot_Break=You cannot break this tomb...
+Tombstone.Broken=[[GRAY]]Your tombstone has broken.
+Tombstone.Was_Destroyed=[[GRAY]]Your tombstone was destroyed by [[DARK_AQUA]]{0}[[GRAY]]!
+
+Ghost.Respawn=[[ITALIC]][[GRAY]]You have respawned as a ghost...
+
+# COMMANDS
+# Reload Command
+Commands.Reload.Success=[[GREEN]]Configuration reloaded!
+
+# HELP PAGES
 Help.Page_Header=[[GOLD]]-----[ [[DARK_RED]]Ghosts Help[[GOLD]]]----- Page {0}/{1}
 Help.Page_Does_Not_Exist=[[RED]]This page does not exist.[[GOLD]]/help [0-{0}]
 Help.Page_Ending=[[GOLD]]Type {0} {1} for more
@@ -17,3 +28,7 @@ Help.Page_1.Line_1=  [[GRAY]]or he will lose his stuff permanently.
 Help.Page_1.Line_2=[[DARK_RED]]* [[GRAY]]Ghosts cannot interact with the world or other players.
 Help.Page_1.Line_3= 
 Help.Page_1.Line_4= 
+
+# UPDATE CHECKER
+UpdateChecker.Outdated=[[GRAY]]You are using an outdated version of [[GOLD]]Ghosts!
+UpdateChecker.New_Available=[[GRAY]]There is a new version available on BukkitDev.
