--- a/src/main/resources/locale/locale_en_US.properties
+++ b/src/main/resources/locale/locale_en_US.properties
@@ -7,6 +7,9 @@ General.Use_Help=[[GRAY]]Use: [[GOLD]]/ghosts help [[GRAY]]for more information
 Tombstone.Cannot_Break=You cannot break this tomb...
 Tombstone.Broken=[[GRAY]]Your tombstone has broken.
 Tombstone.Was_Destroyed=[[GRAY]]Your tombstone was destroyed by [[DARK_AQUA]]{0}[[GRAY]]!
+Tombstone.Inventory_Stored=[[GRAY]]Your inventory was stored.
+Tombstone.Inventory_Overflow=[[GRAY]]{0} items did not fit inside your tombstone.
+Tombstone.Time=[[GRAY]]You have [[RED]]{0} [[GRAY]]to recover your items.
 
 Ghost.Respawn=[[ITALIC]][[GRAY]]You have respawned as a ghost...
 
