--- a/src/main/resources/locale/locale_en_US.properties
+++ b/src/main/resources/locale/locale_en_US.properties
@@ -14,7 +14,9 @@ Tombstone.Time=[[GRAY]]You have [[RED]]{0} [[GRAY]]to recover your items.
 Ghost.Respawn=[[ITALIC]][[GRAY]]You have respawned as a ghost...
 
 # COMMANDS
-# Reload Command
+Commands.NoConsole=[[RED]]You can't use this command from the console!
+Commands.Resurrect=[[GRAY]]You have resurrected. All owned tombstones broke!
+Commands.ResurrectOthers=[[GRAY]]You have resurrected {0}. All tombstones belonging to {0} broke!
 Commands.Reload.Success=[[GREEN]]Configuration reloaded!
 
 # HELP PAGES
