Fix the resurrect command

--- a/src/main/resources/locale/locale_en_US.properties
+++ b/src/main/resources/locale/locale_en_US.properties
@@ -14,9 +14,15 @@ Tombstone.Time=[[GRAY]]You have [[RED]]{0} [[GRAY]]to recover your items.
 Ghost.Respawn=[[ITALIC]][[GRAY]]You have respawned as a ghost...
 
 # COMMANDS
-Commands.NoConsole=[[RED]]You can't use this command from the console!
 Commands.Resurrect=[[GRAY]]You have resurrected. All owned tombstones broke!
 Commands.Reload.Success=[[GREEN]]Configuration reloaded!
+Commands.Usage.0=[[RED]]Proper usage is /{0}
+Commands.Usage.1=[[RED]]Proper usage is /{0} {1}
+Commands.Usage.2=[[RED]]Proper usage is /{0} {1} {2}
+Commands.Usage.3=[[RED]]Proper usage is /{0} {1} {2} {3}
+Commands.NoConsole=[[RED]]You can't use this command from the console!
+Commands.Offline=[[RED]]This command does not work for offline players.
+Commands.NotExist=[[RED]]This player does not exist!
 
 # HELP PAGES
 Help.Page_Header=[[GOLD]]-----[ [[DARK_RED]]Ghosts Help[[GOLD]]]----- Page {0}/{1}
