Add another help page explaining the commands
#6

--- a/src/main/resources/locale/locale_en_US.properties
+++ b/src/main/resources/locale/locale_en_US.properties
@@ -38,6 +38,11 @@ Help.Page_1.Line_1=  [[GRAY]]or he will lose his stuff permanently.
 Help.Page_1.Line_2=[[DARK_RED]]* [[GRAY]]Ghosts cannot interact with the world or other players.
 Help.Page_1.Line_3=
 Help.Page_1.Line_4=
+Help.Page_2.Line_0=[[GOLD]]Commands:
+Help.Page_2.Line_1=[[DARK_RED]]* [[GREEN]]/ghosts <reload> [[GRAY]]Reload the configuration file
+Help.Page_2.Line_2=[[DARK_RED]]* [[GREEN]]/ghosts <help> [[GRAY]]Show the help pages
+Help.Page_2.Line_3=[[DARK_RED]]* [[GREEN]]/resurrect [player] [[GRAY]]Resurrect yourself, or the target player
+Help.Page_2.Line_4=
 
 # UPDATE CHECKER
 UpdateChecker.Outdated=[[GRAY]]You are using an outdated version of [[GOLD]]Ghosts!
