Cleaning up various things

--- a/src/main/resources/locale/locale_en_US.properties
+++ b/src/main/resources/locale/locale_en_US.properties
@@ -11,7 +11,7 @@ Tombstone.Inventory_Stored=[[GRAY]]Your inventory was stored.
 Tombstone.Inventory_Overflow=[[GRAY]]{0} items did not fit inside your tombstone.
 Tombstone.Time=[[GRAY]]You have [[RED]]{0} [[GRAY]]to recover your items.
 
-Ghost.Respawn=[[ITALIC]][[GRAY]]You have respawned as a ghost...
+Ghost.Respawn=[[GRAY]][[ITALIC]]You have respawned as a ghost...
 
 # COMMANDS
 Commands.Resurrect=[[GRAY]]You have resurrected. All owned tombstones broke!
