Add message when trying to break a block as ghost

--- a/src/main/resources/locale/locale_en_US.properties
+++ b/src/main/resources/locale/locale_en_US.properties
@@ -12,6 +12,7 @@ Tombstone.Inventory_Overflow=[[GRAY]]{0} items did not fit inside your tombstone
 Tombstone.Time=[[GRAY]]You have [[RED]]{0} [[GRAY]]to recover your items.
 
 Ghost.Respawn=[[GRAY]][[ITALIC]]You have respawned as a ghost...
+Ghost.Block_Cannot_Break=[[GRAY]][[ITALIC]]Ghosts can't break blocks!
 
 # COMMANDS
 Commands.Resurrect=[[GRAY]]You have resurrected. All owned tombstones broke!
