Added new item; Scroll of Resurrection

--- a/src/main/resources/locale/locale_en_US.properties
+++ b/src/main/resources/locale/locale_en_US.properties
@@ -3,6 +3,7 @@
 General.Plugin_Header=[[GRAY]]-----[ [[GOLD]]{0}[[GRAY]] ]----- by [[GOLD]]{1}
 General.Running_Version=[[GRAY]]Running version: [[DARK_AQUA]]{0}
 General.Use_Help=[[GRAY]]Use: [[GOLD]]/ghosts help [[GRAY]]for more information
+General.NoPermission=[[DARK_RED]]Insufficient permissions.
 
 Tombstone.Cannot_Break=You cannot break this tomb...
 Tombstone.Broken=[[GRAY]]Your tombstone has broken.
@@ -13,6 +14,17 @@ Tombstone.Time=[[GRAY]]You have [[RED]]{0} [[GRAY]]to recover your items.
 
 Ghost.Respawn=[[GRAY]][[ITALIC]]You have respawned as a ghost...
 Ghost.Block_Cannot_Break=[[GRAY]][[ITALIC]]Ghosts can't break blocks!
+
+#ITEMS
+Item.ResurrectionScroll.Success=**YOU HAVE RESURRECTED**
+Item.ResurrectionScroll.Fail.Self=[[RED]]You cannot use this on yourself right now...
+Item.ResurrectionScroll.Fail.Others=[[RED]]You cannot use this on others while dead...
+Item.ResurrectionScroll.Name=Scroll of Resurrection
+Item.ResurrectionScroll.Lore.0=[[GRAY]]Used to bring a player
+Item.ResurrectionScroll.Lore.1=[[GRAY]]back from the dead.
+
+Item.Generic.Wait=[[RED]]You need to wait before you can use this again! [[YELLOW]]({0}s)
+Item.Injured.Wait=You were injured recently and must wait to use this. [[YELLOW]]({0}s)
 
 # COMMANDS
 Commands.Resurrect=[[GRAY]]You have resurrected. All owned tombstones broke!
