Some cleaning up

--- a/src/main/resources/locale/locale_en_US.properties
+++ b/src/main/resources/locale/locale_en_US.properties
@@ -6,6 +6,7 @@ General.Use_Help=[[GRAY]]Use: [[GOLD]]/ghosts help [[GRAY]]for more information
 General.NoPermission=[[DARK_RED]]Insufficient permissions.
 
 Tombstone.Cannot_Break=You cannot break this tomb...
+Tombstone.Broken.All=All owned tombstones broke!
 Tombstone.Broken=[[GRAY]]Your tombstone has broken.
 Tombstone.Was_Destroyed=[[GRAY]]Your tombstone was destroyed by [[DARK_AQUA]]{0}[[GRAY]]!
 Tombstone.Inventory_Stored=[[GRAY]]Your inventory was stored.
@@ -27,7 +28,7 @@ Item.Generic.Wait=[[RED]]You need to wait before you can use this again! [[YELLO
 Item.Injured.Wait=You were injured recently and must wait to use this. [[YELLOW]]({0}s)
 
 # COMMANDS
-Commands.Resurrect=[[GRAY]]You have resurrected. All owned tombstones broke!
+Commands.Resurrect=[[GRAY]]You have resurrected.
 Commands.Reload.Success=[[GREEN]]Configuration reloaded!
 Commands.Usage.0=[[RED]]Proper usage is /{0}
 Commands.Usage.1=[[RED]]Proper usage is /{0} {1}
