--- a/src/main/resources/locale/locale_en_US.properties
+++ b/src/main/resources/locale/locale_en_US.properties
@@ -16,6 +16,9 @@ Tombstone.Time=[[GRAY]]You have [[RED]]{0} [[GRAY]]to recover your items.
 Ghost.Respawn=[[GRAY]][[ITALIC]]You have respawned as a ghost...
 Ghost.Block_Cannot_Break=[[GRAY]][[ITALIC]]Ghosts can't break blocks!
 
+Player.Death.VanillaXPLost=[[GRAY]]You have lost {0}% of your experience
+Player.Death.VanillaXPRecover=[[GRAY]]You have recovered {0}% of your lost experience
+
 #ITEMS
 Item.ResurrectionScroll.Success=**YOU HAVE RESURRECTED**
 Item.ResurrectionScroll.Fail.Self=[[RED]]You cannot use this on yourself right now...
