--- a/Changelog.txt
+++ b/Changelog.txt
@@ -7,6 +7,7 @@ Key:
   - Removal
 
 Version 0.1.0 | Tested on CB 1.7.10-R0.1
+ = Fixed bug where the Updater was running on the main thread.
 
 Version 0.0.1 | Tested on CB 1.7.10-R0.1
  + First alpha release
