--- a/Changelog.txt
+++ b/Changelog.txt
@@ -7,6 +7,7 @@ Key:
   - Removal
 
 Version 0.1.0 | Tested on CB 1.7.10-R0.1
+ + Added item loss when tombstone is created, default 0%
  = Fixed bug where tombstones would get removed but an error was thrown
  = Fixed bug where the Updater was running on the main thread.
 
