--- a/Changelog.txt
+++ b/Changelog.txt
@@ -8,6 +8,8 @@ Key:
 
 Version 0.1.0 | Tested on CB 1.7.10-R0.1
  + Added item loss when tombstone is created, default 0%
+ + Added /giveup command
+ + Added Destroy_Tomb setting when giving up or when using a Scroll of Resurrection
  = Fixed bug where tombstones would get removed but an error was thrown
  = Fixed bug where the Updater was running on the main thread.
 
