--- a/src/main/resources/locale/locale_en_US.properties
+++ b/src/main/resources/locale/locale_en_US.properties
@@ -5,8 +5,8 @@ General.Running_Version=[[GRAY]]Running version: [[DARK_AQUA]]{0}
 General.Use_Help=[[GRAY]]Use: [[GOLD]]/ghosts help [[GRAY]]for more information
 General.NoPermission=[[DARK_RED]]Insufficient permissions.
 
-Tombstone.Cannot_Break=You cannot break this tomb...
-Tombstone.Broken.All=All owned tombstones broke!
+Tombstone.Cannot_Break=[[RED]]You cannot break this tomb...
+Tombstone.Broken.All=[[GRAY]]All owned tombstones broke!
 Tombstone.Broken=[[GRAY]]Your tombstone has broken.
 Tombstone.Was_Destroyed=[[GRAY]]Your tombstone was destroyed by [[DARK_AQUA]]{0}[[GRAY]]!
 Tombstone.Inventory_Stored=[[GRAY]]Your inventory was stored.
@@ -40,6 +40,12 @@ Commands.Usage.3=[[RED]]Proper usage is /{0} {1} {2} {3}
 Commands.NoConsole=[[RED]]You can't use this command from the console!
 Commands.Offline=[[RED]]This command does not work for offline players.
 Commands.NotExist=[[RED]]This player does not exist!
+Commands.GiveUp.Prompt.0=[[GRAY]]Are you sure you want to [[RED]]GIVE UP[[GRAY]]?
+Commands.GiveUp.Prompt.1=[[GRAY]]When you give up you will recover;
+Commands.GiveUp.Prompt.2=[[YELLOW]]{0}% Vanilla XP
+Commands.GiveUp.Prompt.3=[[GRAY]]Confirm using; [[DARK_AQUA]]{0}
+Commands.GiveUp.Prompt.mcMMOXP=[[YELLOW]]{0}% mcMMO XP
+Commands.GiveUp.Prompt.TombDestroyed=[[GRAY]]and your tomb will be [[RED]]destroyed[[GRAY]].
 
 # HELP PAGES
 Help.Page_Header=[[GOLD]]-----[ [[DARK_RED]]Ghosts Help[[GOLD]]]----- Page {0}/{1}
