--- a/src/main/resources/locale/locale_en_US.properties
+++ b/src/main/resources/locale/locale_en_US.properties
@@ -47,6 +47,8 @@ Commands.GiveUp.Prompt.3=[[GRAY]]Confirm using; [[DARK_AQUA]]{0}
 Commands.GiveUp.Prompt.mcMMOXP=[[YELLOW]]{0}% mcMMO XP
 Commands.GiveUp.Prompt.TombDestroyed=[[GRAY]]and your tomb will be [[RED]]destroyed[[GRAY]].
 
+Commands.Stats.DisplayStat=[[GRAY]]{0}: [[YELLOW]]{1}
+
 # HELP PAGES
 Help.Page_Header=[[GOLD]]-----[ [[DARK_RED]]Ghosts Help[[GOLD]]]----- Page {0}/{1}
 Help.Page_Does_Not_Exist=[[RED]]This page does not exist.[[GOLD]]/help [0-{0}]
@@ -66,6 +68,11 @@ Help.Page_2.Line_1=[[DARK_RED]]* [[GREEN]]/ghosts <reload> [[GRAY]]Reload the co
 Help.Page_2.Line_2=[[DARK_RED]]* [[GREEN]]/ghosts <help> [[GRAY]]Show the help pages
 Help.Page_2.Line_3=[[DARK_RED]]* [[GREEN]]/resurrect [player] [[GRAY]]Resurrect yourself, or the target player
 Help.Page_2.Line_4=
+
+#DATABASE RECOVERY
+Profile.Loading.Success=[[GREEN]]Your Ghosts profile has been loaded.
+Profile.Loading.Failure=[[RED]]Ghosts still cannot load your data. You may want to [[AQUA]]contact the server owner.\n[[YELLOW]]You can still play on the server, but you will have [[BOLD]]no Ghosts features [[YELLOW]]and any stats [[BOLD]]will not be saved[[YELLOW]].
+Profile.Loading.AdminFailureNotice=[[DARK_RED]][A][[RED]] Ghosts was unable to load the player data for [[YELLOW]]{0}[[RED]]. [[LIGHT_PURPLE]]Please inspect your database setup.
 
 # UPDATE CHECKER
 UpdateChecker.Outdated=[[GRAY]]You are using an outdated version of [[GOLD]]Ghosts!
