--- a/Changelog.txt
+++ b/Changelog.txt
@@ -12,6 +12,7 @@ Version 0.1.0 | Tested on CB 1.7.10-R0.1
  + Added Destroy_Tomb setting when giving up or when using a Scroll of Resurrection
  = Fixed bug where tombstones would get removed but an error was thrown
  = Fixed bug where the Updater was running on the main thread.
+ ! Changed Vanilla XP loss messages, they are now only shown if XP was lost
  ! Changed datadase flatfile handling
  ! Changed tomblist save path
 
