Prettier stats display

--- a/src/main/resources/locale/locale_en_US.properties
+++ b/src/main/resources/locale/locale_en_US.properties
@@ -48,7 +48,12 @@ Commands.GiveUp.Prompt.3=[[GRAY]]Confirm using; [[DARK_AQUA]]{0}
 Commands.GiveUp.Prompt.mcMMOXP=[[YELLOW]]{0}% mcMMO XP
 Commands.GiveUp.Prompt.TombDestroyed=[[GRAY]]and your tomb will be [[RED]]destroyed[[GRAY]].
 
-Commands.Stats.DisplayStat=[[GRAY]]{0}: [[YELLOW]]{1}
+Commands.Stats.Header=[[GOLD]]-----[ [[DARK_RED]]Ghosts Stats [[GOLD]]]-----
+Commands.Stats.Deaths=[[GRAY]]Deaths: [[RED]]{0}
+Commands.Stats.TombsFound=[[GRAY]]Tombs found: [[GREEN]]{0}
+Commands.Stats.GivenUp=[[GRAY]]Times given up: [[RED]]{0}
+Commands.Stats.ItemsUsed=[[DARK_AQUA]]--- Items Used ---
+Commands.Stats.RessScroll=[[GRAY]]Scroll of Ress [[GOLD]]T{0}[[GRAY]]: [[YELLOW]]{1} (Self), {2} (Others), {3} (Received)
 
 # HELP PAGES
 Help.Page_Header=[[GOLD]]-----[ [[DARK_RED]]Ghosts Help[[GOLD]]]----- Page {0}/{1}
